[package]
name = "hoi4-saves-merger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hoi4save = { git = "https://github.com/rakaly/hoi4save.git", version = "0.3.4" }
jomini = { version = "0.21.3", features = ["serde", "derive", "serde_json", "json"] }
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
text_io = "0.1.12"
